# jet-physics-and-machine-learning

./: .pre-commit-config.yaml  Dockerfile  README-docker.md  README.md  README_docker.md  THESIS_PROGRESS_REPORT_bibhu.docx  dev-environment-readme.md  macos-requirements.txt  project-description.md  pyproject.toml  requirements.txt  script.py
.github/workflows/: docker-image.yaml
src/: avg_pt_ch_pions_sibyll.py  basic_QA_checks.py  child_history.py  generate_pp_events_with_pythia.py  jet_classification_ML.py  pythia_ev_gen.py  pythia_pkl_test.py  pythia_pp_evt_gen.py  read_output_root_file.py  reconstruct_and_tag_jets.py  sample.py  sample_cnn.py  visualize_event.py
